# Breakout-Game

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
game/: CMakeLists.txt
game/include/component/: background.h  ball.h  brick.h  level.h  player_paddle.h  sprite.h
game/include/game/: Exports.h  collision.h  game.h  game_level.h  game_object.h  sprite_renderer.h  utilities.h  window.h
game/src/component/: background.cpp  ball.cpp  brick.cpp  level.cpp  player_paddle.cpp
game/src/game/: game.cpp  game_level.cpp  game_object.cpp  sprite_renderer.cpp  window.cpp
playground/: CMakeLists.txt
playground/src/: playground.cpp
program/: CMakeLists.txt
program/include/program/: Exports.h  program.h
program/src/program/: program.cpp
renderer/: CMakeLists.txt
renderer/include/renderer/: Exports.h  renderer.h
renderer/src/renderer/: renderer.cpp  window.cpp
resource_manager/: CMakeLists.txt
resource_manager/include/resource_manager/: Exports.h  resource_manager.h
resource_manager/src/resource_manager/: resource_manager.cpp
resources/shaders/: sprite.fs
texture/: CMakeLists.txt
texture/include/texture/: Exports.h  texture.h
texture/src/texture/: texture.cpp
